# base-python-project

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.rst  install.sh  pyproject.toml
