[tool.poetry]
name = "APP_NAME"
version = "0.0.0"
description = "Python project skeleton"
authors = ["Dmitry Kovalenko <zerodayyy@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
flake8 = "^3.9.2"
mypy = "^0.812"
pytest = "^6.2.4"

[tool.poetry.scripts]
APP_NAME = "APP_NAME.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
